--- a/app/views/cars/_form.html.erb
+++ b/app/views/cars/_form.html.erb
@@ -23,6 +23,10 @@
     <%= f.label :user_id %><br>
     <%= f.number_field :user_id %>
   </div>
+  <div class="field">
+    <%= f.label :sold %><br>
+    <%= f.check_box :sold %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
